# dictionary_learning_demo

./: .gitignore  .gitmodules  LICENSE  README.md  dataset_test.py  demo.py  demo_config.py  graphing.ipynb  matching_pursuit_sae.py  organize_and_upload_trainers.ipynb  parallel_training.py  pyproject.toml  requirements.txt  stiefel_sae.py  test_scaling.ipynb  thresholding_sae.py  training.py  utils_modified.py
utility_notebooks/: dataset_test.ipynb  extract_results.ipynb  organize_trainers.ipynb  tokenization_testing.ipynb  truncate_test_pytorch.ipynb
