[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "dictionary_learning_demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "circuitsvis==1.43.3",
    "datasets>=2.18.0", 
    "einops>=0.7.0",
    "matplotlib>=3.8.3",
    "nnsight==0.3.7",
    "pandas>=2.2.1",
    "plotly>=5.18.0",
    "torch==2.5.1",
    "tqdm>=4.66.1",
    "zstandard>=0.22.0",
    "wandb>=0.12.0",
    "pytest>=6.2.4",
    "torchvision==0.20.1",
    "wandb>=0.12.0",
    "pytest>=6.2.4",
    "transformers>=4.47.1",
    "ipykernel"
]

[tool.pyright]
typeCheckingMode = "standard"
